actually fix the wrapping with JS
Signed-off-by: Aramis Sennyey <aramiss@spotify.com>

--- a/plugins/catalog-react/package.json
+++ b/plugins/catalog-react/package.json
@@ -69,6 +69,7 @@
     "material-ui-popup-state": "^1.9.3",
     "qs": "^6.9.4",
     "react-use": "^17.2.4",
+    "react-wrap-balancer": "^1.1.0",
     "yaml": "^2.0.0",
     "zen-observable": "^0.10.0"
   },
